2010-09-16  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Worker.pm: Use 'our $tape_num'.
	* installcheck/taper.pl: Fix for correct tape_num.

2010-09-15  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Use many worker.
	* server-src/driverio.c: Init many worker.
	* server-src/driverio.h (TaperState): New taper state.
	* server-src/server_util.c: Add "TAKE-SCRIBE-FROM".
	* server-src/server_util.h: Add TAKE_SCRIBE_FROM.

2010-09-15  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Protocol.pm (TAKE_SCRIBE_FROM): New in protocol.
	* perl/Amanda/Taper/Controller.pm (msg_TAKE_SCRIBE_FROM): New function.
	* perl/Amanda/Taper/Scribe.pm: Add scribe parameter in perm_cb.
	  transfert the xfer to a new scribe.
	* perl/Amanda/Taper/Worker.pm (TAKE_SCRIBE_FROM): New method.
	* perl/Amanda/Xfer.swg (xfer_set_callback): New method.
	* installcheck/taper.pl: Test TAKE-SCRIBE-FROM command.

2010-09-15  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Changer_compat.pl: Fix Installcheck::Run::setup.
	* installcheck/Installcheck/Run.pm (setup): Take an argument to set
						    new vtapes.
	* installcheck/Amanda_Taper_Scribe.pl: Fix for start_scan and perm_cb.
	* installcheck/taper.pl: Fix and test for START_SCAN cmd.
	* perl/Amanda/Taper/Controller.pm (msg_START_SCAN): New function.
	* perl/Amanda/Taper/Protocol.pm (START_SCAN): New in protocol.
	* perl/Amanda/Taper/Scribe.pm: Doesn't automaticaly start a scan,
	  new perm_cb argument, new start_scan method.
	* perl/Amanda/Taper/Worker.pm (START_SCAN): New method,
	  call perm_cb with new argument.
	* server-src/amvault.pl: Call start_scan and perm_cb with new argument.
	* server-src/driver.c: Send START_SCAN command to taper.
	* server-src/driverio.c (taper_cmd): Add START_SCAN.
	* server-src/server_util.c (cmdstr): add "START-SCAN".
	* server-src/server_util.h: Add START_SCAN.

2010-09-15  Jean-Louis Martineau <martineau@zmanda.com>